adding finished files

--- a/index.html
+++ b/index.html
@@ -1,8 +1,88 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="brands.min.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
+      <header>
+         <h1 id="mainHeading">Emily Dion - My Coding Journey</h1>
+      </header>
+      <main>
+         <article id="aboutMe">
+            <img src="./images/personal_headshot.png">
+            <div class="text">
+               <h1 class="heading">About Me</h1>
+               <p id="testP" class="funParagraph">Hey, there! My name is Emily, and I am from Edwardsville, IL. Originally from the small town of Newton, IL, I moved here to attend SIUE in 2021, which I graduated from in 2023 with a bachelors in Mass Communications and a minor in Computer Science. 
+                  I am a driven, caring, and fun-loving individual, who loves travelling, playing cards, doing puzzles, and geeking over movies. I am also an avid Denver Broncos fan. My goal is to become a full stack developer, a true blend of my logical and creative talents.
+               </p>
+            </div>
+         </article>
+         <article>
+            <h1 class="heading">So, why development?</h1>
+            <div>
+               <h2>First Exposure</h2>
+               <p>In fifth grade, I had a fantastic teacher named Ms. Hundley. Not only was she a heavily influential in my life, but she also gave me my first introduction to programming through doing lessons on <a href="https://code.org">code.org</a>. While it wasn't an
+                immediate click, I definitely knew that it resonated with my technical, puzzle-solving, skillset. The interest was sparked.</p>
+            </div>
+            <div>
+               <h2>Getting Started</h2>
+               <p>Unfortunately, I was a part of the unlucky high school graduating class of 2020... a year of dread for just about everyone. The pandemic made for an interesting first year of college, with my first semester being entirely online. For someone who was undecided in their 
+                  major at the time, it forced me to sort through SIUE's entire course catalogue to find anything that worked. In my search, I found CS101: Introduction to Programming. I loved it, and decided to declare Computer Science as my major.
+               </p>
+            </div>
+            <div>
+               <h2>Changing Paths</h2>
+               <p>In my CS track, one of the courses was Database & Web System Development. In this class, we learned the very basics of web development, like HTML, CSS, and basic SQL. I was hooked! However, looking forward at the rest of my major-related coursework, it didn't seem like
+                  much else applied to that specific track. However, the Mass Communications department (which I had a minor in at the time), had two web design classes available. Thinking that this would put me on a better path, I switched majors entirely. In the meantime, I scouted out 
+                  relevant work experience. Through this, I landed a position doing freelance work for a small remote company called <a href="https://www.cloudcarpenter.com">CloudCarpenter</a>. My boss, Shane, developed his own CMS for his clients to use. My role was "Front End Developer",
+                  where I helped to build out templates for the users to start their site with, and also organized foundational pages for clients who didn't want to do everything themselves. This was really great experience for someone just starting out, and I am super grateful for it.
+               </p>
+            </div>
+            <div>
+               <h2>Now, We're Here...</h2>
+               <p>Thinking I had done everything to be on the right path toward a job in web development, I was shocked when all of the jobs required a Computer Science degree (or equivalent training). While I shouldn't have been entirely surprised by this, I was disheartened when I found that
+                  no companies seeking web developers would even look at my application. However, this led me to look at more design-focused positions, which I am currently working in now. While design is fun, and I excel in that role, I miss development. With a career in development, I hope to 
+                  be challenged every day, and feel fulfilled by solving complex problems in creative ways. Now, LaunchCode will allow me to get the position that I have been dreaming of for some time now. 
+               </p>
+            </div>
+         </article>
+         <article>
+            <h1 class="heading">Relevant Work Experience</h1>
+            <ul>
+               <li class="main-bullet">Hunter Engineering Company (<em>May 2023-Present</em>)</li>
+               <ul>
+                  <li>Currently, I am a Digital Graphic Designer for Hunter Engineering Company. Hunter is an excellent company to work for, and I am so grateful to work there. In my role, I do a variety of graphic design work, like logos and ads, but I also help with UI/UX design for some of our 
+                     internal applications. I work with our development team frequently, who made me aware of LaunchCode in the first place. Outside of this, I am also a Project Manager of our company brand redesign, which myself and the other marketing department intern conceptualized and pitched 
+                     within our first few months of working there. Through this, I have learned a great deal about managing people, but have also gotten the opportunity to lead web team. I have been able to begin to apply my LaunchCode knowledge already, which is exciting.
+                  </li>
+               </ul>
+               <li class="main-bullet">CloudCarpenter (<em>June 2022-Present</em>)</li>
+               <ul>
+                  <li>Through CloudCarpenter, I started as an intern and eventually got placed full-timea as one of their Frontend Developers. Through this, I made templates for our CMS using HTML and CSS. I also fixed bugs on pre-existing templates. I also took on setting up and organizing pages 
+                     for new clients. This was the best way to get my hands dirty and really be able to understand the ins-and-outs of that part of development.
+                  </li>
+               </ul>
+            </ul>
+         </article>
+         <article>
+            <h1 id="skills" class="heading">Skills</h1>
+            <div class="logos">
+               <img src="images/html5.png">
+               <img src="images/css3.png">
+               <img src="images/javascript.png">
+               <img src="images/github.png">
+               <img src="images/java.png">
+               <img src="images/c++.png">
+               <img src="images/python.png">
+               <img src="images/sql.png">
+            </div>
+         </article>
+      </main>
+      <footer>&copy 2024 Emily Dion</footer>
    </body>
 </html>
